# flow_and_transport_2d

./: .gitignore  CMakeLists.txt  README.md  header.h  main.cpp  peak.py
Discretization/: discretization.cpp  discretization.h  fv_diffusion2d.cpp  fv_diffusion2d_tpfa.cpp
Process/: process.cpp  process.h  process_advection2d.cpp  process_flow2d.cpp
ProcessData/: processdata.cpp  processdata.h  processdata_advection2d.cpp  processdata_flow2d.cpp
data/: domain.geo  my.vtk  my1.vtk  params.txt
